@@ -135,7 +135,6 @@
                     <source>25</source>
                     <target>25</target>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -144,7 +143,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.2</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine></argLine>
                 </configuration>
             </plugin>
             <!-- Maven Central publishing -->
